--- a/exp/package.json
+++ b/exp/package.json
@@ -1,11 +1,13 @@
 {
   "scripts": {
     "serve": "tsc && node index.js",
-    "start": "nodemon index.ts"
+    "start": "nodemon index.ts",
+    "ingest": "ts-node scripts/ingest.ts"
   },
   "dependencies": {
     "@types/express": "^4.17.17",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "typescript": "^5.0.3"
   },
   "devDependencies": {
